--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".FormulaGeneral"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="true" />
         <activity android:name=".MenuOperaciones"
             android:exported="true">
             <intent-filter>
