--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CalculosMatematicosAPP"
         tools:targetApi="31">
-<<<<<<< HEAD
+
         <activity
             android:name=".BasicasActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-=======
-        <activity android:name=".MenuOperaciones"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
->>>>>>> d555983855ba0c611c4cbeb327ac6fffbd9689f6
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
+        <!--<activity android:name=".MenuOperaciones"
+            android:exported="false"/>-->
+
+
     </application>
 
 </manifest>
