--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         </intent-filter>
     </activity>
 
-        <!--<activity android:name=".MenuOperaciones"
-            android:exported="false"/>-->
+        <activity android:name=".MenuOperaciones"
+            android:exported="false"/>
 
 
     </application>
