--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CalculosMatematicosAPP"
         tools:targetApi="31">
-        <activity android:name=".MenuOperaciones"
+        <activity
+            android:name=".MainActivitySumar"
+            android:exported="false" />
+        <activity
+            android:name=".MenuOperaciones"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
