--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CalculosMatematicosAPP"
         tools:targetApi="31">
         <activity
-            android:name=".TrianguloActivity"
+            android:name=".TriangulosActivity"
             android:exported="false" />
     </application>
 
