--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CalculosMatematicosAPP"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivitySumar"
+            android:name=".MainNumerosPerfectos"
             android:exported="false" />
         <activity
             android:name=".MenuOperaciones"
