--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         tools:targetApi="31">
 
         <activity
-
-
             android:name=".MainNumerosPerfectos"
             android:exported="false"/>
         <activity
@@ -34,12 +32,9 @@
         <activity
             android:name=".TrianguloActivity"
             android:exported="false" />
-
-
         <activity
             android:name=".MainActivitySumar"
             android:exported="false" />
-
         <activity
             android:name=".MultiplicacionMonomios"
             android:exported="false" />
@@ -58,19 +53,13 @@
         <activity
             android:name=".Factorial"
             android:exported="false"/>
-
-
-
         <activity
             android:name=".BasicasActivity"
             android:exported="false">
-
-         </activity>
-
-
-        <activity android:name=".MenuOperaciones"
-                   android:exported="true">
-
+        </activity>
+        <activity
+            android:name=".MenuOperaciones"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
