--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,10 +37,6 @@
 
 
         <activity
-            android:name=".MainActivitySumar"
-            android:exported="false" />
-
-        <activity
             android:name=".MultiplicacionMonomios"
             android:exported="false" />
         <activity
@@ -77,6 +73,9 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
 
     </application>
